[project]
name = "dsc10-transcripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.31",
]

[project.scripts]
visualize-messages = "dsc10_transcripts.visualize_messages:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
